src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginViewbox.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

	<Viewbox
  HorizontalAlignment="Left"
  VerticalAlignment="Top"
  Height="250"
  Width="250"
  Margin="-10,-10,10,10">
	
	
		<Button Height="100" Width="100" />

	</Viewbox>

</Grid>
